--- a/_talks/2025_EFAS.md
+++ b/_talks/2025_EFAS.md
@@ -1,11 +1,12 @@
 ---
-title: "Conference Proceeding talk 3 on Relevant Topic in Your Field"
+title: "
+longitudinal changes in electrical stapedius reflex thresholds (eSRT) in children with cochlear implants"
 collection: talks
-type: "Conference proceedings talk"
-permalink: /talks/2014-03-01-talk-3
+type: "Conference talk"
+permalink: /talks/2025_EFAS
 venue: "Testing Institute of America 2014 Annual Conference"
-date: 2014-03-01
-location: "Los Angeles, CA, USA"
+date: 2025-05-21
+location: "Vienna, AT"
 ---
 
 This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.
