--- a/_talks/2025_EFAS.md
+++ b/_talks/2025_EFAS.md
@@ -9,4 +9,10 @@ date: 2025-05-21
 location: "Vienna, AT"
 ---
 
-This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.
+Background: The electrically evoked stapedius reflex threshold (eSRT) can be used as a tool to estimate the maximum comfort level (MCL) during the fitting of cochlear implants (CI), especially in children and toddlers. This study examined the long-term changes in eSRT over a ten-year observation period. 
+
+Methods: A retrospective analysis was conducted on data from 26 children with cochlear implants (50 ears). The data included charge units (QU) required to evoke the stapedius reflex. Time-series statistical methods were applied to assess trends in QU values and their variance, normalized to individual baselines. 
+
+Results: The mean QU values significantly increased during the first six months post-implantation and then stabilized. Variance in eSRT decreased substantially over the first five years, with three key milestones observed at six months, 18 months, and 4.25 years, reflecting a consistent decline in variability over time. 
+
+Conclusion: CI fitting schedules should align with the temporal changes in eSRT variance. Frequent fittings are recommended during the first 18 months, followed by annual adjustments until the fourth year post-implantation. Beyond this period, less frequent fittings may suffice. 
